[metadata]
name = pySBT
description = Python implementation of spherical Bessel transform in O(Nlog(N)) time based on the algorithm by J. Talman
long_description = file: README.md
url = https://github.com/QijingZheng/pySBT
author = Qijing Zheng
author_email = zqj@ustc.edu.cn
license = GPL
license_file = LICENSE

[options]
packages = pysbt
install_requires =
    numpy>=1.22.2
    scipy>=1.8.0
python_requires = >=3.6
